--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+.cont{
+max-width: 400px;
+min-height: 450px;
+margin: 0 auto;
+background-color:lightblue;
+box-shadow: 0 0 10px grey ;
+margin-top: 60px;
+padding: 15px 50px;
+}
+.exp-cont{
+display: flex;
+justify-content: space-around;
+background-color: whitesmoke;
+box-shadow: 0 0 10px grey ;
+}
+.text-center{
   text-align: center;
+  font-family: sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.trans-form input{
+  width: 100%;
+  margin: 10px 0;
+  padding: 5px 0;
+  box-shadow:0 0 10px grey ;
+  border: lightcyan;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.trans-list{
+  margin: 0;
+  padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.trans-list >li{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: lightcyan;
+  box-shadow:0 0 10px grey ;
+  padding:10px 5px;
+  margin: 5px 0;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub-but{
+  font-family: sans-serif;
+  background-color: rosybrown;
+  font-weight: bolder;
 }
