--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ box-shadow: 0 0 10px grey ;
   margin: 10px 0;
   padding: 5px 0;
   box-shadow:0 0 10px grey ;
-  border: lightcyan;
+  border: rgb(204, 230, 230);
 }
 .trans-list{
   margin: 0;
